@@ -39,6 +39,7 @@ PHP                                                                        NEWS
 - Fixed bug #34062 (Crash in catch block when many arguments are used).
   (Dmitry)
 - Fixed bug #34045 (Buffer overflow with serialized object). (Dmitry)
+- Fixed bug #34001 (pdo_mysql truncates numberic fields at 4 chars). (Ilia)
 - Fixed bug #33999 (object remains object when cast to int). (Dmitry)
 - Fixed bug #33996 (No information given for fatal error on passing invalid
   value to typed argument). (Dmitry)
